# enhanced-nagata-sdf

./: .gitignore  LICENSE  README.md  compare_results.py  pyproject.toml  sphere_verification.py
enhanced_nagata_sdf/: __init__.py  enhanced_nagata_backend.py  enhanced_nagata_backend_torch.py  nagata_storage.py  nsm_reader.py  sparse_narrowband_sdf.py  visualize_nagata.py
examples/: README.md  build_and_query.py  verify_sphere_sdf.py
models/: box.nsm  cone.nsm  sphere.nsm
nagata_teacher_runtime/: README.md  enhanced_nagata_backend.py  enhanced_nagata_backend_torch.py  generate_teacher_field.py  generate_teacher_field_gpu.py  nagata_patch.py  nsm_reader.py  visualize_nagata.py
paper/: final_sparse_narrowband_sdf_paper.tex  revised_nagata_teacher_paper.tex  revised_nagata_teacher_paper_stage1.tex
scripts/: build_sparse_narrowband_sdf.py  query_sparse_narrowband_sdf.py  sphere_verify_parallel.py
tests/: README.md  test_import.py  test_sdf.py
tools/: analyze_sphere_sign_mismatch.py  compare_cpu_gpu_small.py  decompose_sphere_error_sources.py  export_teacher_figures.py  run_sharp_model_gpu_verify.py  run_sphere_gpu_verify.py
