[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-nagata-sdf"
version = "1.0.0"
description = "Build directly queryable sparse narrow-band signed distance fields from enhanced Nagata surface meshes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Project Authors"}
]
keywords = ["sdf", "signed-distance-field", "geometry-processing", "nagata-patch", "computational-geometry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
visualization = ["pyvista>=0.40.0", "matplotlib>=3.5.0"]
gpu = ["torch>=2.0.0"]
dev = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/yourusername/enhanced-nagata-sdf"
Repository = "https://github.com/yourusername/enhanced-nagata-sdf"
Issues = "https://github.com/yourusername/enhanced-nagata-sdf/issues"

[tool.setuptools]
packages = ["enhanced_nagata_sdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
